fix bug #43221 (SimpleXML adding default namespace in addAttribute) add test